# routes/matches_routes.go
@@ -1,0 +1,13 @@
+package routes
+
+import (
+	"github.com/afrizalsebastian/football-team-management/server"
+	"github.com/gin-gonic/gin"
+)
+
+func SetupMatchRoutes(router *gin.RouterGroup, server *server.HttpServer) {
+	matchGroup := router.Group("/matches")
+	{
+		matchGroup.POST("/", server.CreateMatch)
+	}
+}
